Fixed Long Title Overflow

--- a/Root/Fixes.css
+++ b/Root/Fixes.css
@@ -140,3 +140,10 @@
 .listItem {
   padding-left: 1em;
 }
+
+/* Prevent title truncation in libraries */
+.cardText {  
+  white-space: normal !important;  
+  text-overflow: unset !important;  
+  overflow: visible !important;  
+}
